<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name_pro">Effects</string>
    <string name="app_name_track">Pro</string>
    <string name="take_photo_camera">Take photo</string>
    <string name="choose_from_gallery">Choose image</string>
    <string name="img_desc">Images</string>
    <string name="action_settings">Settings</string>
    <string name="or">or</string>
    <string name="error_img_not_found">Oops! please try again.</string>
    <string name="internal_storage">Internal storage</string>
    <string name="error_apply_effect">Oops! please try again.</string>
    <string name="please_wait">Please wait</string>
    <string name="exit_prompt">Are you sure that you want to close editor?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_media">Error: your SD-Card is not available.</string>
    <string name="saved">Please find your image at:\n:url:"</string>
    <string name="save_failed">Oops! please try again.</string>
    <string name="redL">Red</string>
    <string name="greenL">Green</string>
    <string name="blueL">Blue</string>
    <string name="hue">Hue: :value:\u00B0</string>
    <string name="sat">Saturation: :value:%</string>
    <string name="brightness">Brightness: :value:%</string>
    <string name="contrast">Contrast: :value:</string>
    <string name="rotate">Angle: :value:\u00B0</string>
    <string name="flip_v">Horizon.</string>
    <string name="flip_h">Vertical</string>
    <string name="red">Red: :value:</string>
    <string name="green">Green: :value:</string>
    <string name="blue">Blue: :value:</string>
    <string name="redP">Red: :value:%</string>
    <string name="greenP">Green: :value:%</string>
    <string name="blueP">Blue: :value:%</string>
    <string name="cdepth">Color Depth: :value:</string>
    <string name="effect1">Brightness</string>
    <string name="effect2">Flip</string>
    <string name="effect3">Hue</string>
    <string name="effect4">Tint</string>
    <string name="effect5">Gamma</string>
    <string name="effect6">Invert</string>
    <string name="effect7">Grayscale</string>
    <string name="effect8">Sepia</string>
    <string name="effect9">Sharpen</string>
    <string name="effect10">Gau. Blur</string>
    <string name="effect11">C. Filter</string>
    <string name="effect12">C. Depth</string>
    <string name="effect13">Emboss</string>
    <string name="effect14">Boost</string>
    <string name="effect15">Noise</string>
    <string name="effect16">Sketch</string>
    <string name="effect17">Vignette</string>
    <string name="effect18">Saturation</string>
    <string name="effect19">Contrast</string>

    <string-array name="megouser_version">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <!-- Develoepr configuation details -->

    <string name="cameraboxid">GKZPHMG4P</string>
    <string name="galleryboxid">3VOXTDQYF</string>-->

    <!-- Develoepr configuation details meshop -->
    <!--<string name="devId">5</string>-->
    <!--<string name="appId">Q5XZRE3AO</string>-->
    <!--<string name="appSecret">C302BXW7Y</string>-->
    <!--<string name="store">1</string>-->
    <string name="title_activity_deep_link">DeepLinkActivity</string>

    <!--<string name="fb_id">161537983985997</string>-->

    <string name="fb_id">1068358513211042</string>
    <string name="app_name">Mego User Demo</string>

    <!--  <string name="appId">T0IELU5FW</string>
      <string name="appSecret">I927D72C2</string>
      <string name="devId">1</string>
      <string name="store">1</string>-->
    <!--<string name="appId3">W94C5FN8C</string>
     <string name="appSecret3">FSA7CB6RU</string>
     <string name="devId1">5</string>
     <string name="store1">1</string>-->

    <!--main face & gplus-->
    <string name="appId1">WTQKNY45M</string>
    <string name="appSecret1">T2G3XKVNY</string>
    <string name="devId1">3</string>
    <string name="store1">1</string>

    <!--main email-->
    <string name="appId2">9SRW4HUL0</string>
    <string name="appSecret2">1WY2SPJWA</string>
    <string name="devId2">3</string>
    <string name="store2">1</string>
    <!--service test-->
    <!--  <string name="appId2">T0IELU5FW</string>
      <string name="appSecret2">I927D72C2</string>
      <string name="devId2">1</string>
      <string name="store2">1</string>-->
    <string name="appSecret">ODI5XJ66I</string>
    <string name="appId">113F9YAZB</string>
    <string name="devId">1</string>
    <string name="store">1</string>
    <!--service Demo new-->
    <!-- <string name="appId2">113F9YAZB</string>
     <string name="appSecret2">ODI5XJ66I</string>
     <string name="devId2">1</string>
     <string name="store2">1</string>-->

    <!--main phone-->
    <string name="appId3">6NBWTNHC3</string>
    <string name="appSecret3">52ADZLG96</string>
    <string name="devId3">3</string>
    <string name="store3">1</string>-->


</resources>